[package]
name = "gigs"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "graphics", "rendering", "shaders"]
keywords = ["game", "engine", "gamedev", "graphics", "bevy", "shaders"]
description = "Intermittent graphics jobs for the Bevy Game Engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ecoskey/gigs"
rust-version = "1.83.0"


[dependencies]
bevy_app = "0.15.0"
bevy_ecs = "0.15.0"
bevy_render = "0.15.0"
bevy_utils = "0.15.0"

[dev-dependencies]
bevy = "0.15.0"
