[package]
name = "gigs"
version = "0.1.2"
edition = "2021"
authors = ["Emerson Coskey <coskey@emerlabs.net>"]
categories = ["games", "game-engines", "graphics", "rendering"]
keywords = ["game", "gamedev", "graphics", "bevy", "shaders"]
description = "on-demand graphics jobs for the Bevy Game Engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ecoskey/gigs"
rust-version = "1.83.0"
readme = "README.md"
exclude = [".github"]

[dependencies]
bevy_app = "0.15.2"
bevy_ecs = "0.15.2"
bevy_render = "0.15.2"
bevy_utils = "0.15.2"
crossbeam-channel = "0.5.0"
disqualified = "1.0.0"

